adjusted media query for small safari screens to fix header img from getting distorted

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,6 +218,8 @@ footer a {
     #DSH {
         align-self: center;
         order: 2;
+        max-height: 150px;
+        min-width: 130px;
     }
     #main-header h1 {
         order: 1;
